# vulcan-relay

./: .gitignore  Cargo.toml  Dockerfile  README.MD  build.rs
.github/workflows/: docker-publish.yml  publish-schema.yml  rust.yml
config/: README  cert.pem  key.pem
examples/: relay.rs
examples/ffmpeg_streamer/: README.MD  copy.sh  encode.sh  graphql_ws_protocol.rs  main.rs  signal_query.gql  signal_schema.gql  signal_schema.rs  stream.sh
sample/: package-lock.json  package.json  tsconfig.json  webpack.config.js
sample/public/: bundle.js  index.html
sample/src/: index.ts  index2.ts
src/: cmdline.rs  control_schema.rs  lib.rs  main.rs  messages.rs  relay_server.rs  room.rs  session.rs  signal_schema.rs  util.rs
tests/: relay_server.rs  session.rs  signal_schema.rs
tests/fixture/: mod.rs
tokio-local/: Cargo.toml
tokio-local/src/: lib.rs  spawn_pinned.rs
tokio-local/tests/: spawn_pinned.rs
