[package]
name = "vulcan-relay"
version = "0.1.0"
authors = ["netdex"]
edition = "2018"
default-run = "vulcan-relay"
build = "build.rs"

# [patch.crates-io]
# mediasoup = { git = "https://github.com/versatica/mediasoup", branch = "v3" }

[dependencies]
mediasoup = "0.7"

log = "0.4.14"
env_logger = "0.8.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

thiserror = "1.0"
anyhow = "1.0"
clap = "3.0.0-beta.2"
bimap = "0.6.1"
derive_more = "0.99.0"

tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.5", features = ["sync"] }
futures = "0.3"
async-trait = "0.1.48"

warp = { version = "0.3", features = ["tls"] }
async-graphql = "2.8.4"
async-graphql-warp = "2.8.4"

tokio-local = { path = "third-party/tokio-local" }

[build-dependencies]
built = "0.5"

[dev-dependencies]
graphql_client = "0.9"
graphql-ws = { path = "third-party/graphql-ws" }
tokio-tungstenite = { version = "0.14", features = ["native-tls"] }
native-tls = "0.2"
http = "0.2"

[workspace]
members = ["third-party/tokio-local", "third-party/graphql-ws"]
