[package]
name = "vulcan-relay"
version = "0.1.0"
authors = ["netdex"]
edition = "2018"
default-run = "vulcan-relay"
build = "build.rs"

[dependencies]
mediasoup = { version = "0.8", git = "https://github.com/netdex/mediasoup", branch = "rust-async-trait-send" }

log = "0.4"
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }

thiserror = "1.0"
anyhow = "1.0"
clap = "3.0.0-beta.2"
bimap = "0.6.1"
derive_more = "0.99.0"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

warp = { version = "0.3", features = ["tls"] }
# async-graphql 2.9 added bytes support, which messes up UUID scalar types
async-graphql = "~2.8"
async-graphql-warp = "~2.8"

[build-dependencies]
built = "0.5"

[dev-dependencies]
graphql_client = "0.10"
graphql-ws = { version = "0.3", git = "https://github.com/Netdex/graphql-ws" }
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
rustls = { version = "0.19", features = ["dangerous_configuration"] }
webpki = "0.21.0"
http = "0.2"
