[package]
name = "tokio-local"
version = "0.1.0"
authors = ["Gordon Guan <admin@netdex.org>"]
edition = "2018"

# https://github.com/tokio-rs/tokio/pull/3370

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features=["rt", "sync"] }